frontend/src/components/Navbar/Navbar.scss
.app__navbar {
  width: 80%;
  align-self: center;
  max-height: 80px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 4rem;
  position: fixed;
  transition: all 0.3s ease-in-out;
  z-index: 3;

  &.scrolled__navbar {
    backdrop-filter: blur(42px);
    // background-color: rgb(101 101 101 / 20%);
    background-color: rgb(20 20 20 / 20%);
    border-radius: 10px;
    top: 1rem;
    width: 90%;
    transition: all 0.3s ease-in-out;
    position: fixed;
  }

  @media screen and (max-width: 1050px) {
    width: 100%;
  }

  @media screen and (max-width: 800px) {
    padding: 1rem 2rem;
  }

  @media screen and (max-width: 768px) {
    padding: 1rem;
    justify-content: space-between;
    width: 90%;
    backdrop-filter: blur(42px);
    background-color: rgb(101 101 101 / 20%);
    border-radius: 10px;
    opacity: 1;
    top: 1rem;
    align-self: center;
  }

  &-logo {
    display: flex;
    justify-content: flex-start;
    align-items: center;
    gap: 0.5rem;

    p {
      color: var(--white-color-text-primary);
      font-size: 1.6rem;
      font-family: "Dancing Script", serif;
      //  font-family: "Sacramento", serif;
      font-weight: 600;
      font-style: normal;

      @media screen and (max-width: 768px) {
        font-size: 1.2rem;
      }
    }
  }

  &-links {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;

    &-item {
      display: flex;
      justify-content: center;
      align-items: center;
      flex-direction: column;
      position: relative;
      height: 100px;

      div.dot {
        width: 5px;
        height: 5px;
        background: transparent;
        border-radius: 50%;
        margin-bottom: 5px;
        transition: all 0.3s ease-in-out;
      }

      a {
        text-decoration: none;
        font-size: 1rem;
        text-transform: uppercase;
        font-weight: 500;
        margin: 0 1rem;
        cursor: pointer;
        color: var(--white-color-text-primary);
        transition: background 0.3s ease-in-out;

        @media screen and (max-width: 1100px) {
          font-size: 0.8rem;
          margin: 0 0.5rem;
        }
      }

      &:hover {
        div {
          background: var(--primary-color-contrast);
        }
        a {
          color: var(--primary-color-contrast);
        }

        .app__navbar-links-item-extra {
          display: grid;
          background-color: var(--bg-primary);
          a {
            color: var(--black-color-text-primary);
            background-color: var(--bg-primary);
          }
        }
      }

      &-arrow {
        position: absolute;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        background: transparent;
        border: none;
        cursor: pointer;

        &:hover {
          background: transparent !important;
          border: none !important;
        }
      }

      &-extra {
        position: absolute;
        top: 75px;
        z-index: 5;
        background-color: var(--bg-primary);
        padding: 1rem;
        border-radius: 20px;
        display: none;
        gap: 0.5rem;
        min-width: 460px;
        width: 520px;
        grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
        justify-items: center;
        align-items: center;

        a.app__navbar-links-item-extra-link {
          color: var(--black-color-text-primary);
          display: flex;
          justify-content: center;
          align-items: center;
          text-align: center;
          text-decoration: none;
          text-transform: none;
          width: 100%;
          height: 0;
          padding-top: 100%;
          position: relative;
          border-radius: 10px;
          margin: 0;

          span {
            position: absolute;
            z-index: 2;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            font-size: 1rem;
            font-weight: 500;
            display: flex;
            justify-content: center;
            align-items: center;
          }

          img.extra-link-hover-img {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            object-fit: cover;
            border-radius: 10px;
            display: none;
          }

          .gradient-overlay {
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: rgba(0, 0, 0, 0.6);
            border-radius: 10px;
            z-index: 1;
            display: none;
          }

          &:hover {
            background-color: var(--bg-black-color-contrast);
            color: var(--white-color-text-primary);

            img.extra-link-hover-img {
              display: block !important;
            }

            .gradient-overlay {
              display: block;
            }
          }
        }
      }
    }

    .route-link {
      &.active {
        div.dot {
          background: var(--primary-color-contrast);
        }
        a {
          color: var(--primary-color-contrast);
        }
      }
    }

    @media screen and (max-width: 768px) {
      display: none;
    }
  }

  &-redirect {
    a {
      text-decoration: none;

      button {
        padding: 0.6rem 1.2rem;
        border: 1px solid var(--white-color-text-primary);
        display: flex;
        justify-content: center;
        align-items: baseline;
        gap: 0.5rem;
        cursor: pointer;
        transition: all 0.3s ease-in-out;
        font-size: 0.9rem;
        font-weight: 600;
        color: var(--white-color-text-primary);

        div {
          box-shadow: none !important;
          // display: none !important;
        }

        svg {
          height: 14px;
          width: 14px;
        }

        &:hover {
          .group {
            box-shadow: none !important;

            div {
              box-shadow: none !important;
            }
          }
        }

        &:hover {
          svg {
            transform: rotate(0deg);
          }
        }

        @media screen and (max-width: 1100px) {
          padding: 0.4rem 1rem;
          font-size: 0.7rem;

          svg {
            height: 10px;
            width: 10px;
          }
        }
      }
    }

    @media screen and (max-width: 768px) {
      display: none;
    }
  }

  //! Hamburger menu section
  &-hamburgerMenu {
    display: none;
    font-size: 1.2rem;
    color: var(--white-color-text-primary);

    @media screen and (max-width: 768px) {
      display: block;
    }

    &-overlay {
      position: fixed;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      width: 100vw;
      height: 0;
      transform-origin: top center;
      // background-color: rgb(169 169 169 / 50%);
      background-color: var(--primary-color-contrast);
      opacity: 0;
      visibility: hidden;
      transition: opacity 0.4s ease, visibility 0.4s ease, width 0.3s ease-out,
        height 0.3s ease;
      z-index: 3;
    }
    &-overlay.active {
      opacity: 0.2;
      height: 200vh;
      width: 100vw;
      visibility: visible;
      transition: opacity 0.3s ease, visibility 0.3s ease, width 0.3s ease-out,
        height 0.3s ease;
    }

    &-mainSection {
      position: fixed;
      top: 0;
      left: 0;
      width: 0;
      height: 0;
      background-color: var(--bg-dark-primary);
      border-radius: 0px;
      transform-origin: top;
      transition: opacity 1s ease, border-radius 0.5s ease-out, height 0.3s ease;
      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.2);
      z-index: 4;
      overflow: hidden;
      color: var(--white-color-text-primary);

      .menu-item__container {
        width: 100%;
        height: 100%;
        overflow-y: auto;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: start;
        gap: 1rem;
        padding: 2rem 2rem 1.5rem 2rem;
        position: relative;

        .menu-close-icon {
          position: absolute;
          top: 2rem;
          right: 2rem;
          height: 24px;
          width: 24px;
          cursor: pointer;
        }

        &-title {
          font-size: 1.2rem;
          font-weight: 700;
          letter-spacing: 2px;
        }

        &-links {
          width: 100%;
        }

        &-link {
          width: 100%;
          display: flex;
          justify-content: space-between;
          align-items: center;
          gap: 0.5rem;
          text-decoration: none;
          color: var(--white-color-text-primary);
          padding: 0.5rem 0;
          border-bottom: 1px solid rgb(16, 16, 16);
          font-size: 1rem;
          font-weight: 200;
        }

        .hamburger-link.active {
          .menu-item__container-link {
            color: var(--primary-color-text-contrast-2);
            font-weight: 600;
          }
        }

        &-redirect {
          width: 100%;
          button {
            width: 100%;
            display: flex;
            justify-content: space-between;
            align-items: center;
            gap: 0.5rem;
            text-decoration: none;
            color: var(--black-color-text-primary);
            padding: 1em 2rem;
            font-size: 1rem;
            font-weight: 600;
            background-color: #ffeace;
            border-radius: 10px;
          }
        }
      }
    }

    &-mainSection.active {
      opacity: 1;
      width: 100%;
      height: auto;
      border-radius: 15px;
      transition: opacity 1s ease, border-radius 0.5s ease-out, height 0.3s ease;
    }
  }
}

